build: 更新MySQL驱动并添加spring-tx依赖
- 将mysql-connector-java升级为mysql-connector-j 8.0.33版本
- 为应用模块添加spring-tx事务管理依赖
- 清理无用的import语句
- 优化MeetingId的空值校验逻辑
- 更新.gitignore文件添加常见开发环境配置